# Lima-camera-hexitec

./: .gitignore  CMakeLists.txt  Makefile  README.md  hexitec.inc
conda/camera/: meta.yaml
conda/tango/: meta.yaml
include/: HexitecCamera.h  HexitecDetInfoCtrlObj.h  HexitecInterface.h  HexitecProcessingTask.h  HexitecSavingCtrlObj.h  HexitecSavingTask.h  HexitecSyncCtrlObj.h
python/: __init__.py
sdk/: HexitecApi.ini  Makefile
sdk/GigE-orig-src-1.0.0.5/: WhoKnowsWhati.ini  aspectGigE.ini
sdk/GigE-orig-src-1.0.0.5/GigE Source/GigE/: GigE.aps  GigE.cpp  GigE.h  GigE.rc  stdafx.cpp
sdk/GigE-orig-src-1.0.0.6/: Pleora SDK Version.txt
sdk/GigE-orig-src-1.0.0.6/GigE Source/GigE/: GigE.aps  GigE.cpp  GigE.h  GigE.rc  ReadMe.txt  stdafx.h
sdk/GigE-orig-src-1.0.0.6/aS_lib/aS_messages/: aS_messages.h
sdk/GigE-orig-src-1.0.0.8/GigE Source/GigE/: GigE.aps  GigE.cpp  GigE.h  GigE.rc  GigE.vcxproj  resource.h
sdk/GigE-orig-src-1.0.1.9/: Pleora SDK Version.txt
sdk/GigE-orig-src-1.0.1.9/GigE Source/: GigE.sln
sdk/GigE-orig-src-1.0.1.9/GigE Source/GigE/: GigE.aps  GigE.cpp  GigE.h  GigE.rc  GigE.vcxproj.filters  aS_lib.cpp
sdk/GigE-orig-src-1.0.1.9/aS_lib/aS_messages/: aS_messages.h
sdk/include/: GigE.h  HexitecApi.h  aS_lib.h  aS_messages.h
sdk/src/: GigE.cpp  HexitecApi.cpp  HexitecDummy.cpp  Makefile
sdk/tools/: Makefile
sdk/tools/cpp/: Makefile
sdk/tools/src/: Makefile
sip/: HexitecCamera.sip  HexitecInterface.sip
src/: HexitecCamera.cpp  HexitecDetInfoCtrlObj.cpp  HexitecInterface.cpp  HexitecProcessingTask.cpp  HexitecSavingCtrlObj.cpp  HexitecSavingTask.cpp  HexitecSyncCtrlObj.cpp  Makefile
tango/: CMakeLists.txt  Hexitec.py
test/: Makefile  net.sh  test.cpp  test2.cpp  test4.cpp  test4.py  test6.cpp  valgrind.report
